# tsptw

./: .gitignore  Cargo.toml  README.md  experiments.md  run_experiments.sh
data/: inst1_greedy_nearest_insertion.sol  inst1_greedy_nearest_neighbor.sol  inst1_greedy_time_window_aware.sol  inst1_test_nearest_neighbor_backtrack.sol  inst1_test_time_window_aware.sol  inst2_greedy_nearest_insertion.sol  inst2_greedy_nearest_neighbor.sol  inst3  inst3_greedy_nearest_insertion.sol  inst3_greedy_time_window_aware.sol
scripts/: aggregate_results.py  generate_plots.py  generate_tables.py  inject_calibrated_temps.py
src/: lib.rs  main.rs  shared_types.rs
src/algorithms/: aco.rs  ga.rs  hill_climbing.rs  mod.rs  recuit.rs  simulated_annealing.rs  vns.rs
src/eval/: lexicographic.rs  mod.rs  random.rs  utils.rs  weighted.rs
src/experiments/: configs.rs  mod.rs  output.rs  runner.rs  types.rs
src/factories/: aco_factory.rs  ga_factory.rs  hc_factory.rs  mod.rs  sa_factory.rs  vns_factory.rs
src/gui/: app.rs  config.rs  mod.rs  solver.rs  state.rs
src/gui/components/: dashboard.rs  grid.rs  mod.rs  statistics.rs  welcome.rs
src/gui/tabs/: gantt.rs  metrics.rs  mod.rs  route.rs
src/hpo/: mod.rs
src/initializer/: mod.rs  random_init.rs
src/io/: io_instance.rs  io_solution.rs  mod.rs
src/neighborhood/: alternating.rs  bandit.rs  mod.rs  swap.rs  twoopt.rs  utils.rs
src/neighbourhood/: mod.rs  swap.rs  twoopt.rs  utils.rs
src/problem/: mod.rs
src/runner/: mod.rs
src/shared/: mod.rs  types.rs
src/solver/: ga_sa.rs  mod.rs
src/utils/: general.rs
(+9 files in other folders)
