[package]
name = "mh-tsptw"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }

csv = "1.4.0"
ordered-float = "5.1.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
eframe = "0.31.0"
egui = "0.31.0"
egui_plot = "0.31.0"
chrono = "0.4"
ndarray = "0.17.1"

